syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;

package com.example.kotlin_example_app;

service ArticleService {
  rpc FindAllArticles (google.protobuf.Empty) returns (ArticleList);
}

message ArticleList {
  repeated Article articles = 1;
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string authorId = 4;
}
